fixed buttons but need to fix wrap

--- a/style.css
+++ b/style.css
@@ -3,15 +3,6 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-.container1 {
-    display: flex;
-    background: #1f2937;
-    flex-direction: column;
-    height: 275px;
-    color: #f9faf8;
-    flex-wrap: wrap;
-    min-width: 0;
-}
 .header-top {
     display: flex;
     flex-direction: row;
@@ -19,13 +10,15 @@
     align-items: center;
     width: 100%;
     color: rgb(121, 59, 59);
+    background: #1f2937;
 }
 .header-top span {
     color: olive;
 }
 .header-top h2 {
     margin-left: 20px;
-    align-self: start;
+    margin-right: auto;
+    margin-bottom: 10px;
 }
 a:visited {
     color: olivedrab;
@@ -38,31 +31,46 @@ ul {
     flex-direction: row;
     list-style-type: none;
     gap: 80px;
+    margin-right: 40px;
+}
+li {
+    display: flex;
+    flex-wrap: nowrap;
 }
 button {
     background: #3882f6;
     color: #f9faf8;
     border-radius: 5px;
-    max-width: 70px;
-    min-height: 25px;
+    width: 70px;
+    height: 25px;
+    display: flex;
+    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    margin-left: 6px;
 }
 .hero {
     display: flex;
-    flex-direction: column;
-    justify-items: center;
-    gap: 10px;
-    margin-top: 30px;
-    margin-left: 50px;
-    max-width: 300px;
-    min-width: 0;
+    flex-direction: row;
+    justify-content: space-between;
+    color: #f9faf8;
+    background: #1f2937;
+    text-align: left;
+    padding-left: 60px;
+    height: 200px;;
 }
-.image1 {
-    display: flex;
-    background: pink;
-    min-height: 150px;
-    text-align: center;
-    max-width: 300px;
-    border: 1px #f9faf8 solid;
+.hero p {
+    width: 400px;
+    margin-left: 6px;
+    margin-top: 20px;
+}
+.hero img {
+    max-width: 200px;
+    min-width: 325px;
+    justify-content: center;
+    margin-right: 45px;
+    margin-top: 25px;
+    
 }
 img {
     width: 100px;
@@ -115,28 +123,28 @@ img {
 .container4 {
     display: flex;
     height: 190px;
-    justify-content: center;
-    align-items: center;
     color: #f9faf8;
     border: 1px black solid;
+    justify-content: center;
+    align-items: center;
 }
 .backdrop {
     display: flex;
-    min-height: 100px;
+    min-height: 120px;
     background: #3882f6;
-    flex-direction: column;
     min-width: 700px;
-    justify-content: start;
-}
-.backdrop h2 {
-    margin-left: 100px;
-}
-.backdrop button {
-    display: flex;
-    flex-wrap: nowrap;
-    min-width: 60px;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.backdrop p {
+    width: 300px;
+    text-align: center;
+}
+.button2 {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
 }
 .footer {
     display: flex;
@@ -145,6 +153,5 @@ img {
     justify-content: center;
     align-items: center;
     color: #f9faf8;
-
 }
 
